<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="yellcast.com.yell.fragments.YellNodeForm"
    android:orientation="vertical">

    <TextView
        android:text="@string/create_label_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/yell_label_edit"
        android:singleLine="true"/>

    <TextView
        android:text="@string/create_label_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

    <RadioGroup
        android:id="@+id/typeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travis_name"
            android:id="@+id/typeRadioTravis"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenkins_name"
            android:id="@+id/typeRadioJenkins" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up4sure_name"
            android:id="@+id/typeRadioUp4sure" />
    </RadioGroup>

    <TextView
        android:text="@string/create_label_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/yell_url_edit"
        android:singleLine="true"/>

    <Button
        android:id="@+id/yell_create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_button_label"/>


</LinearLayout>
